Added support for setting the agent JVM args.